# latched

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Phi3.5-mini-instruct.onnx  README.md  phi-3.5-mini-instruct.onnx  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yaml
examples/Llama3.1-CoreML/: main.py
examples/Phi3.5-mini-instruct-to-CoreML/: main.py
examples/Phi3.5-mini-to-coreml/: coreml_example.py  example.py
examples/Phi3.5-mini-to-openvino/: example.py  main.py  openvino_example.py
examples/Phi3.5-mini-to-tensorrt/: example.py  tensorrt_example.py
examples/Phi3.5-mini-to-tflite/: example.py  main.py  tflite_example.py
examples/gemma-2-2b-it/: gemma_onnx_example.py
examples/llama-3.1-8B-Instruct-to-onnx/: llama_onnx_example.py
examples/llama-3.1-8B-Instruct-to-openvino/: llama_openvino_example.py
examples/phi-3.5-mini-to-coreml/: coreml_example.py  playground.ipynb  run.py  run_coreml_example.ipynb  test_script.py
examples/phi-3.5-mini-to-onnx/: onnx_example.py  phi_3.5_onnx_example.py
examples/phi-3.5-mini-to-openvino/: openvino_example.py
examples/phi-3.5-mini-to-tensorrt/: tensorrt_example.py
examples/phi-3.5-mini-to-tflite/: test_script.py  tflite_example.py
src/latched/: __init__.py
src/latched/configs/: apple.py  base.py  device.py
src/latched/endpoints/: __init__.py  base.py  intel.py
src/latched/exporters/: __init__.py
src/latched/model_exporters/: auto.py  (+7 more)
tests/optimizer/: optimization_file_size.py
tests/test_optimizer/: test_optimization_file_size.py
(+21 files in other folders)
