# pyproject.toml
[tool.poetry]
name = "latched"
version = "0.0.0"
description = ""
authors = ["psycoder <psycoder@latched.ai>", "sungman <sungman@latched.ai>"]

[tool.poetry.dependencies]
python = "3.11.9"
coremltools = "8.0b2"
transformers = "<4.44"
torch = ">=2.4"
numpy = "<2"
optimum = "^1.21.4"
torchvision = "^0.19.1"
optimum-quanto = "^0.2.4"
onnxruntime = "^1.19.2"
onnx = "^1.16.2"
optimum-intel = "^1.19.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
black = "^24.8.0"
ruff = "^0.6.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
